# dex

./: .gitignore  PRD.md  README.md  k3d-config.yaml
apps/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/apps/grpcapi/: Cargo.toml  build.rs
apps/apps/grpcapi/src/: main.rs
apps/apps/rapi/: Cargo.toml  readme.md
apps/apps/rapi/src/: main.rs
apps/apps/wsapi/: Cargo.toml
apps/apps/wsapi/src/: main.rs
apps/grpcapi/: Cargo.toml  build.rs
apps/grpcapi-client/: Cargo.toml
apps/grpcapi-client/src/: main.rs
apps/rapi/: Cargo.toml
apps/wsapi/: Cargo.toml  README.md
apps/wsapi-client/: Cargo.toml  README.md
apps/wsapi-client/src/: main.rs
apps/wsapi/src/: main.rs
k8s/: README.md  SETUP.md  apply.sh  bootstrap.sh  check.sh  coredns-values.yaml  refresh-argocd.sh
k8s/gitops/: readme.md
k8s/grpcapi/: deployment.yaml  ingress.yaml  service.yaml
k8s/load-balancer/: README.md  metallb-12adv.yaml  metallb-ip-pool.yaml  metallb.yaml
k8s/metrics-server/: metrics-server.yaml
k8s/monitoring/: grafana-ingress.yaml  grafana.yaml  kube-state-metrics.yaml  loki.yaml  node-exporter.yaml  prometheus-kube.yaml  prometheus.yaml  readme.md  tempo.yaml
k8s/namespaces/: namespace-grpcapi.yaml
k8s/rapi/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/traefik/: traefik.yaml
