[package]
name = "wsapi-client"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8" }
futures-channel = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
log = { version = "0.4.28" }
tokio = { version = "1.48.0", features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread"
] }
tokio-tungstenite = { version = "0.28.0" }
